tests/errors/clock.td
component clock {
  provides interface clock;
}
